--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -1329,18 +1329,62 @@ function editParticipantName(pIdx) {
   }
 }
 
-async function handleScoreTournament() {
-  const select = document.getElementById('tournamentSelect');
-  const tId = select.value;
-  if (!tId) return;
-  await scoreTournament(tId);
+async function getMostRecentCompletedTournamentId() {
+  for (let i = TOURNAMENTS.length - 1; i >= 0; i--) {
+    const tournament = TOURNAMENTS[i];
+    try {
+      const url = `https://site.api.espn.com/apis/site/v2/sports/golf/leaderboard?event=${tournament.id}`;
+      const res = await fetch(url);
+      if (!res.ok) continue;
+      const data = await res.json();
+      const statusName = data?.events?.[0]?.status?.type?.name || '';
+      if (statusName === 'STATUS_FINAL' || statusName === 'STATUS_POST') {
+        return tournament.id;
+      }
+    } catch (err) {
+      console.warn('Failed status check for', tournament.id, err);
+    }
+  }
+  return null;
 }
 
-async function scoreTournament(tournamentId) {
+async function selectMostRecentCompletedTournamentInDropdown() {
+  const select = document.getElementById('tournamentSelect');
+  const latestCompletedId = await getMostRecentCompletedTournamentId();
+  if (latestCompletedId && TOURNAMENTS.some(t => t.id === latestCompletedId)) {
+    select.value = latestCompletedId;
+    return latestCompletedId;
+  }
+  return select.value || TOURNAMENTS[TOURNAMENTS.length - 1].id;
+}
+
+async function handleScoreTournament() {
+  const select = document.getElementById('tournamentSelect');
+  const statusEl = document.getElementById('scoreStatus');
+  const selectedCompletedId = await selectMostRecentCompletedTournamentInDropdown();
+  const selectedIndex = TOURNAMENTS.findIndex(t => t.id === selectedCompletedId);
+  if (selectedIndex < 0) return;
+
+  statusEl.textContent = `Refreshing through ${TOURNAMENTS[selectedIndex].abbr} (0/${selectedIndex + 1})...`;
+  statusEl.style.color = '#7f8c9b';
+
+  for (let i = 0; i <= selectedIndex; i++) {
+    await scoreTournament(TOURNAMENTS[i].id, { suppressModal: true, suppressStatus: true });
+    statusEl.textContent = `Refreshing through ${TOURNAMENTS[selectedIndex].abbr} (${i + 1}/${selectedIndex + 1})...`;
+  }
+
+  statusEl.textContent = `Updated ${selectedIndex + 1} tournaments through ${TOURNAMENTS[selectedIndex].name}.`;
+  statusEl.style.color = '#2ecc71';
+}
+
+async function scoreTournament(tournamentId, options = {}) {
+  const { suppressModal = false, suppressStatus = false } = options;
   const tournament = TOURNAMENTS.find(t => t.id === tournamentId);
   const statusEl = document.getElementById('scoreStatus');
-  statusEl.textContent = `Fetching ${tournament.abbr}...`;
-  statusEl.style.color = '#7f8c9b';
+  if (!suppressStatus) {
+    statusEl.textContent = `Fetching ${tournament.abbr}...`;
+    statusEl.style.color = '#7f8c9b';
+  }
 
   try {
     const url = `https://site.api.espn.com/apis/site/v2/sports/golf/leaderboard?event=${tournamentId}`;
@@ -1402,15 +1446,22 @@ async function scoreTournament(tournamentId) {
     saveState();
     renderAll();
 
-    statusEl.textContent = `${tournament.abbr} scored!`;
-    statusEl.style.color = '#2ecc71';
+    if (!suppressStatus) {
+      statusEl.textContent = `${tournament.abbr} scored!`;
+      statusEl.style.color = '#2ecc71';
+    }
 
-    showScoreResults(tournament.name, matchResults);
+    if (!suppressModal) {
+      showScoreResults(tournament.name, matchResults);
+    }
 
   } catch (err) {
-    statusEl.textContent = `Error: ${err.message}`;
-    statusEl.style.color = '#e74c3c';
+    if (!suppressStatus) {
+      statusEl.textContent = `Error: ${err.message}`;
+      statusEl.style.color = '#e74c3c';
+    }
     console.error('Scoring error:', err);
+    throw err;
   }
 }
 
@@ -1551,9 +1602,10 @@ document.getElementById('scoreResultsModal').addEventListener('click', (e) => {
   if (e.target === document.getElementById('scoreResultsModal')) closeScoreResultsModal();
 });
 
-function init() {
+async function init() {
   loadState();
   renderAll();
+  await selectMostRecentCompletedTournamentInDropdown();
 }
 
 init();
