--- a/index.html
+++ b/index.html
@@ -444,8 +444,9 @@
 
   <!-- CONTROLS -->
   <div class="controls">
-    <select id="tournamentSelect"></select>
     <button class="btn-score" onclick="handleScoreTournament()">Fetch Scores</button>
+    <span style="font-size:12px; color:#7f8c9b;">Fetch Scores Through:</span>
+    <select id="tournamentSelect"></select>
     <span class="score-status" id="scoreStatus"></span>
     <div class="controls-spacer"></div>
     <button onclick="exportData()">Export JSON</button>
