--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -444,8 +444,7 @@
 
   <!-- CONTROLS -->
   <div class="controls">
-    <button class="btn-score" onclick="handleScoreTournament()">Fetch Scores</button>
-    <span style="font-size:12px; color:#7f8c9b;">Fetch Scores Through:</span>
+    <button class="btn-score" onclick="handleScoreTournament()">Fetch Scores Through:</button>
     <select id="tournamentSelect"></select>
     <span class="score-status" id="scoreStatus"></span>
     <div class="controls-spacer"></div>
