--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
+    html, body {
+      min-height: 100%;
+      background: #0f1e36;
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #0a1628;
       color: #e0e6ed;
       min-height: 100vh;
     }
