--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -149,12 +149,15 @@
     .grid-wrapper {
       overflow-x: auto;
       margin: 0;
+      padding: 0 24px 16px;
+      background: #0f1e36;
       position: relative;
     }
     #fantasyGrid {
       border-collapse: separate;
       border-spacing: 0;
       font-size: 13px;
+      width: 100%;
       min-width: 100%;
     }
     #fantasyGrid thead th {
