--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -148,6 +148,7 @@
     /* ===== GRID ===== */
     .grid-wrapper {
       overflow-x: auto;
+      overflow-y: hidden;
       margin: 0;
       padding: 0 24px 16px;
       background: #0f1e36;
@@ -211,8 +212,9 @@
     #fantasyGrid thead th.sticky-col {
       position: sticky;
       left: 0;
-      z-index: 15;
+      z-index: 30;
       background: #0f1e36;
+      box-shadow: 2px 0 0 #2a3a5c;
       min-width: 140px;
       text-align: left;
       padding-left: 14px;
@@ -220,8 +222,9 @@
     #fantasyGrid thead th.sticky-right {
       position: sticky;
       right: 0;
-      z-index: 15;
+      z-index: 30;
       background: #0f1e36;
+      box-shadow: -2px 0 0 #2a3a5c;
       min-width: 100px;
     }
     #fantasyGrid tbody td {
@@ -233,8 +236,9 @@
     #fantasyGrid tbody td.sticky-col {
       position: sticky;
       left: 0;
-      z-index: 5;
+      z-index: 20;
       background: #0f1e36;
+      overflow: hidden;
       padding: 10px 14px;
       font-weight: 600;
       color: #fff;
@@ -246,8 +250,9 @@
     #fantasyGrid tbody td.sticky-right {
       position: sticky;
       right: 0;
-      z-index: 5;
+      z-index: 20;
       background: #0f1e36;
+      overflow: hidden;
       padding: 10px 8px;
       text-align: center;
       font-weight: 700;
@@ -409,6 +414,8 @@
 
     /* ===== RESPONSIVE ===== */
     @media (max-width: 768px) {
+      .standings-panel, .current-week-panel, .controls { padding-left: 12px; padding-right: 12px; }
+      .grid-wrapper { padding: 0 12px 12px; }
       .controls { flex-direction: column; align-items: stretch; }
       .controls-spacer { display: none; }
       .header h1 { font-size: 20px; }
